--- a/src/skfolio_analysis.ipynb
+++ b/src/skfolio_analysis.ipynb
@@ -4,18 +4,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "amount invested: ₹30,00,000.00\n",
-      "final amount: ₹1,52,56,482.61\n",
-      "amount gained: ₹1,22,56,482.61\n",
-      "CAGR: 408.55%\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import pandas as pd\n",
@@ -23,6 +12,9 @@
     "import plotly.io as pio\n",
     "from plotly.io import show\n",
     "import numpy as np\n",
+    "\n",
+    "from dotenv import load_dotenv\n",
+    "load_dotenv()\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
@@ -36,7 +28,7 @@
     "    RiskBudgeting\n",
     ")\n",
     "\n",
-    "PORTFOLIO_PATH = os.environ.get('PORTFOLIO_PATH')"
+    "PORTFOLIO_PATH = os.getenv('PORTFOLIO_PATH')"
    ]
   },
   {
@@ -5747,38 +5739,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "70k for first year:\n",
-      "amount invested: ₹8,40,000.00\n",
-      "final amount: ₹11,23,695.20\n",
-      "amount gained: ₹2,83,695.20\n",
-      "CAGR: 33.77%\n",
-      "1L next year\n",
-      "amount invested: ₹12,00,000.00\n",
-      "final amount: ₹16,05,278.86\n",
-      "amount gained: ₹4,05,278.86\n",
-      "CAGR: 33.77%\n",
-      "1.5L next year\n",
-      "amount invested: ₹18,00,000.00\n",
-      "final amount: ₹24,07,918.29\n",
-      "amount gained: ₹6,07,918.29\n",
-      "CAGR: 33.77%\n"
+      "amount invested: ₹42,00,000.00\n",
+      "final amount: ₹2,13,59,075.65\n",
+      "amount gained: ₹1,71,59,075.65\n",
+      "CAGR: 408.55%\n"
      ]
     }
    ],
    "source": [
-    "print('70k for first year:')\n",
-    "utils.print_sip_info(monthly_amount=70_000, annual_rate=.6767, months=12*1)\n",
-    "print('1L next year')\n",
-    "utils.print_sip_info(monthly_amount=1_00_000, annual_rate=.6767, months=12*1)\n",
-    "print('1.5L next year')\n",
-    "utils.print_sip_info(monthly_amount=1_50_000, annual_rate=.6767, months=12*1)"
+    "utils.print_sip_info(monthly_amount=70_000, annual_rate=.7, months=12*5)"
    ]
   }
  ],
